# semantic-segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
src/: datamodule.py  dataset.py  lightning_module.py  semantic_segmentation.py  utils.py
